--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,4 +23,9 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Interface\SwingTradingStrategyInterface: '@App\Strategy\StrongUptrendStrategy'
+    App\Interface\MarketIndexInterface: '@App\Service\Nasdaq2000IndexService'
+    # App\Interface\MarketIndexInterface: '@App\Service\ChineseMarketIndexService'
+
+    App\Interface\SwingTradingStrategyInterface: '@App\Strategy\NoStopLossStrategy'
+
+
