Created diagram controller

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,9 @@ fabric.properties
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/symfony,phpstorm,visualstudiocode
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
