--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
+  "devDependencies": {
+      "@babel/core": "^7.17.0",
+      "@babel/preset-env": "^7.16.0",
+      "@symfony/webpack-encore": "^5.0.0",
+      "core-js": "^3.38.0",
+      "regenerator-runtime": "^0.13.9",
+      "webpack": "^5.74.0",
+      "webpack-cli": "^5.1.0",
+      "webpack-notifier": "^1.15.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+      "dev-server": "encore dev-server",
+      "dev": "encore dev",
+      "watch": "encore dev --watch",
+      "build": "encore production --progress"
+  },
   "dependencies": {
-    "express": "^4.21.1",
-    "puppeteer": "^23.6.1",
-    "puppeteer-extra": "^3.3.6"
+      "chart.js": "^4.4.7",
+      "chartjs-adapter-date-fns": "^3.0.0",
+      "chartjs-adapter-luxon": "^1.3.1",
+      "chartjs-chart-financial": "^0.2.1",
+      "luxon": "^3.5.0"
   }
 }
