Fixed problem with yahoo service

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,6 +33,7 @@ services:
 
 
 
-    App\Interface\SwingTradingStrategyInterface: '@App\Strategy\ShitCoinVolumeStrategy'
+    App\Interface\SwingTradingStrategyInterface: '@App\Strategy\AllTimeHighStrategy'
+    
 
 
